--- a/Lip.Installer/AppComponents.wxs
+++ b/Lip.Installer/AppComponents.wxs
@@ -5,14 +5,10 @@
                 <!--Because wixproj not work with dotnet publish command, but use dotnet build can't generate single file. -->
                 <!--So, I have to hard-code binary path instead of add Lip.CLI to dependencies.-->
                 <File Source="..\bin\lip.exe"/>
-                <File Source="..\bin\lip.pdb"/>
-                <File Source="..\bin\Lip.Migration.pdb"/>
-                <File Source="..\bin\Lip.Core.pdb"/>
-                <File Source="..\bin\Lip.Context.pdb"/>
-                <File Source="..\bin\Golang.Org.X.Mod.pdb"/>
                 <Environment Id='UpdatePath' Name='PATH' Action='set' Permanent='no' System='yes' Part='last'
                              Value='[INSTALLFOLDER]'/>
             </Component>
+            <Files Include="..\bin\**"><Exclude Files="..\bin\lip.exe" /></Files>
         </ComponentGroup>
     </Fragment>
 </Wix>
