feat(installer): open browser to download .NET when it is not installed

--- a/Lip.Installer/Package.wxs
+++ b/Lip.Installer/Package.wxs
@@ -20,7 +20,7 @@
                 Value="license.rtf"
         />
         <UIRef Id="WixUI_ErrorProgressText"/>
-        
+
         <netfx:DotNetCompatibilityCheck
                 Property="DOTNETRUNTIMECHECK"
                 RollForward="major"
@@ -28,7 +28,16 @@
                 Platform="$(sys.BUILDARCH)"
                 Version="9.0.0"
         />
-        
-        <Launch Condition="DOTNETRUNTIMECHECK = 0" Message="!(loc.DotNetNotInstalled)"/>
+
+        <Property Id="WixUnelevatedShellExecTarget"
+                  Value="https://dotnet.microsoft.com/zh-cn/download/dotnet/thank-you/runtime-9.0.3-windows-x64-installer"/>
+        <CustomAction Id="DownloadDotNetCustomAction" BinaryRef="Wix4UtilCA_$(sys.BUILDARCHSHORT)"
+                      DllEntry="WixUnelevatedShellExec" Execute="immediate" Return="check"/>
+        <CustomAction Id="DotNetNotInstalled" Error="!(loc.DotNetNotInstalled)"/>
+
+        <InstallUISequence>
+            <Custom Action="DownloadDotNetCustomAction" After="CostFinalize" Condition="NOT Installed AND DOTNETRUNTIMECHECK &lt;&gt; 0"/>
+            <Custom Action="DotNetNotInstalled" After="DownloadDotNetCustomAction" Condition="NOT Installed AND DOTNETRUNTIMECHECK &lt;&gt; 0"/>
+        </InstallUISequence>
     </Package>
 </Wix>
