--- a/Lip.GUI.Lite/Views/Pages/DashboardPage.xaml
+++ b/Lip.GUI.Lite/Views/Pages/DashboardPage.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:helpers="clr-namespace:Lip.GUI.Lite.Helpers"
     xmlns:lip="clr-namespace:Lip.Core;assembly=Lip.Core"
     xmlns:local="clr-namespace:Lip.GUI.Lite.Views.Pages"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -18,92 +19,178 @@
     Foreground="{DynamicResource TextFillColorPrimaryBrush}"
     ScrollViewer.CanContentScroll="False"
     mc:Ignorable="d">
+    <Page.Resources>
+        <helpers:StringNotEmptyToVisibilityConverter x:Key="StringNotEmptyToVisibilityConverter" />
+        <helpers:InverseBooleanToVisibilityConverter x:Key="InverseBooleanToVisibilityConverter" />
+        <helpers:ZeroToVisibilityConverter x:Key="ZeroToVisibilityConverter" />
+    </Page.Resources>
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="*" />
-        </Grid.ColumnDefinitions>
-        <Grid Grid.Column="0">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*" />
-                <RowDefinition Height="Auto" />
-            </Grid.RowDefinitions>
-            <ui:ListView
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <StackPanel Orientation="Horizontal">
+            <TextBlock
                 Grid.Row="0"
-                ItemsSource="{Binding ViewModel.Packs}"
-                ScrollViewer.CanContentScroll="False"
-                ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-                ScrollViewer.VerticalScrollBarVisibility="Hidden"
-                SelectedItem="{Binding ViewModel.SelectedPack, Mode=TwoWay}">
-                <ui:ListView.ItemTemplate>
-                    <DataTemplate DataType="{x:Type vm:DashboardViewModel+Package}">
-                        <!--  I don't know why it has an error, every thing work right  -->
-                        <StackPanel Margin="10">
-                            <Grid Margin="0,4,0,0">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="*" />
-                                    <ColumnDefinition Width="Auto" />
-                                </Grid.ColumnDefinitions>
+                Margin="16,16,0,16"
+                HorizontalAlignment="Left"
+                FontSize="32"
+                FontWeight="Bold"
+                Text="Dashboard" />
+            <ui:Button Margin="10,0,0,0" Command="{Binding ViewModel.RefreshPackagesCommand}">
+                <ui:SymbolIcon Symbol="ArrowClockwise20" />
+            </ui:Button>
+        </StackPanel>
+        <Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+            <Grid Grid.Column="0">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+                <ui:ListView
+                    Grid.Row="0"
+                    ItemsSource="{Binding ViewModel.Packs}"
+                    ScrollViewer.CanContentScroll="False"
+                    ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+                    ScrollViewer.VerticalScrollBarVisibility="Hidden"
+                    SelectedItem="{Binding ViewModel.CurrentPack, Mode=TwoWay}">
+                    <ui:ListView.ItemTemplate>
+                        <DataTemplate DataType="{x:Type vm:DashboardViewModel+PackageListItemViewModel}">
+                            <!--  I don't know why it has an error, every thing work right  -->
+                            <StackPanel Margin="10">
+                                <Grid Margin="0,4,0,0">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*" />
+                                        <ColumnDefinition Width="Auto" />
+                                    </Grid.ColumnDefinitions>
+                                    <ui:TextBlock
+                                        Grid.Column="0"
+                                        Margin="0,0,0,4"
+                                        FontTypography="BodyStrong"
+                                        Text="{Binding Name}"
+                                        TextTrimming="WordEllipsis" />
+                                    <ui:Badge
+                                        Grid.Column="1"
+                                        Margin="12,0,0,0"
+                                        VerticalAlignment="Center">
+                                        <StackPanel Orientation="Horizontal">
+                                            <ui:TextBlock FontTypography="Body" Text="{Binding Specifier.Version}" />
+                                            <ui:TextBlock
+                                                Margin="8,0,0,0"
+                                                FontTypography="Body"
+                                                Text="{Binding Variant.Label}"
+                                                Visibility="{Binding Variant.Label, Converter={StaticResource StringNotEmptyToVisibilityConverter}}" />
+                                        </StackPanel>
+                                    </ui:Badge>
+                                </Grid>
                                 <ui:TextBlock
-                                    Grid.Column="0"
-                                    Margin="0,0,0,4"
-                                    FontTypography="BodyStrong"
-                                    Text="{Binding Manifest.Info.Name}"
-                                    TextTrimming="WordEllipsis" />
-                                <ui:Badge
-                                    Grid.Column="1"
-                                    Margin="12,0,0,0"
-                                    VerticalAlignment="Center">
-                                    <Grid>
-                                        <ui:TextBlock FontTypography="Body" Text="{Binding Manifest.Version}" />
-                                        <ui:TextBlock
-                                            Margin="8,0,0,0"
-                                            FontTypography="Body"
-                                            Text="{Binding Variant.Label}" />
-                                    </Grid>
-                                </ui:Badge>
-                            </Grid>
-                            <ui:TextBlock
-                                VerticalAlignment="Center"
-                                Text="{Binding Manifest.Info.Description}"
-                                TextWrapping="Wrap" />
-                        </StackPanel>
-                    </DataTemplate>
-                </ui:ListView.ItemTemplate>
-            </ui:ListView>
+                                    VerticalAlignment="Center"
+                                    Text="{Binding Manifest.Info.Description}"
+                                    TextWrapping="Wrap"
+                                    Visibility="{Binding IsManifestLoaded, Converter={StaticResource BooleanToVisibilityConverter}}" />
+                            </StackPanel>
+                        </DataTemplate>
+                    </ui:ListView.ItemTemplate>
+                </ui:ListView>
+                <ui:Card
+                    Grid.Row="1"
+                    Margin="4,0,4,12"
+                    VerticalAlignment="Stretch">
+                    <StackPanel>
+                        <TextBlock Margin="0,0,0,12" Text="install Package" />
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="Auto" />
+                            </Grid.ColumnDefinitions>
+                            <ui:TextBox Grid.Column="0" Text="{Binding ViewModel.InstallPackageText, UpdateSourceTrigger=PropertyChanged}" />
+                            <ui:Button
+                                Grid.Column="1"
+                                Margin="8,0,0,0"
+                                Command="{Binding ViewModel.InstallCommand}"
+                                Content="Install" />
+                        </Grid>
+                    </StackPanel>
+                </ui:Card>
+            </Grid>
             <ui:Card
-                Grid.Row="1"
-                Margin="4,0,4,12"
-                VerticalAlignment="Stretch">
-                <StackPanel>
-                    <TextBlock Margin="0,0,0,12" Text="install Package" />
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="Auto" />
-                        </Grid.ColumnDefinitions>
-                        <ui:TextBox Grid.Column="0" />
+                Grid.Column="1"
+                Margin="4,0,-20,12"
+                VerticalAlignment="Stretch"
+                VerticalContentAlignment="Top">
+                <Grid>
+                    <StackPanel VerticalAlignment="Top" Visibility="{Binding ViewModel.ShowCurrentPack, Converter={StaticResource BooleanToVisibilityConverter}}">
+                        <TextBlock
+                            FontSize="20"
+                            FontWeight="Bold"
+                            Text="{Binding ViewModel.CurrentPackName, FallbackValue=''}"
+                            TextTrimming="CharacterEllipsis" />
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Margin="0,8,0,0" Text="Version" />
+                            <TextBlock Margin="5,8,0,0" Text="{Binding ViewModel.CurrentPackVersion}" />
+                            <TextBlock Margin="5,8,0,0" Text="{Binding ViewModel.CurrentPackVariantLabel}" />
+                        </StackPanel>
+                        <ProgressBar
+                            Margin="10,10,10,6"
+                            IsIndeterminate="{Binding ViewModel.IsProgressIndeterminate}"
+                            Visibility="{Binding ViewModel.InProgress, Converter={StaticResource BooleanToVisibilityConverter}}"
+                            Value="{Binding ViewModel.Progress}" />
+                        <TextBlock
+                            Height="36"
+                            Text="{Binding ViewModel.ProgressMessage}"
+                            TextTrimming="CharacterEllipsis"
+                            TextWrapping="Wrap"
+                            Visibility="{Binding ViewModel.InProgress, Converter={StaticResource BooleanToVisibilityConverter}}" />
                         <ui:Button
-                            Grid.Column="1"
-                            Margin="8,0,0,0"
-                            Content="Install" />
-                    </Grid>
-                </StackPanel>
+                            Margin="0,8,0,0"
+                            Command="{Binding ViewModel.UninstallCommand}"
+                            Content="Uninstall"
+                            Visibility="{Binding ViewModel.InProgress, Converter={StaticResource InverseBooleanToVisibilityConverter}}" />
+                        <TextBlock
+                            Margin="0,8,0,0"
+                            Text="{Binding ViewModel.CurrentPack.Manifest.Info.Description}"
+                            TextWrapping="Wrap" />
+
+                        <!--  Additional information from the manifest  -->
+                        <StackPanel Visibility="{Binding ViewModel.CurrentPack, Converter={StaticResource NullToVisibilityConverter}}">
+                            <TextBlock
+                                Margin="0,12,0,4"
+                                FontWeight="Bold"
+                                Text="Dependencies" />
+                            <ItemsControl ItemsSource="{Binding ViewModel.CurrentPack.Variant.Dependencies}">
+                                <ItemsControl.ItemTemplate>
+                                    <DataTemplate>
+                                        <StackPanel Orientation="Horizontal">
+                                            <TextBlock FontWeight="SemiBold" Text="{Binding Key}" />
+                                            <TextBlock Text=": " />
+                                            <TextBlock Text="{Binding Value}" />
+                                        </StackPanel>
+                                    </DataTemplate>
+                                </ItemsControl.ItemTemplate>
+                                <ItemsControl.Style>
+                                    <Style TargetType="ItemsControl">
+                                        <Style.Triggers>
+                                            <DataTrigger Binding="{Binding ViewModel.CurrentPack.Variant.Dependencies.Count}" Value="0">
+                                                <Setter Property="Visibility" Value="Collapsed" />
+                                            </DataTrigger>
+                                        </Style.Triggers>
+                                    </Style>
+                                </ItemsControl.Style>
+                            </ItemsControl>
+                            <TextBlock
+                                Margin="0,4,0,0"
+                                FontStyle="Italic"
+                                Foreground="Gray"
+                                Text="No Dependencies"
+                                Visibility="{Binding ViewModel.CurrentPack.Variant.Dependencies.Count, Converter={StaticResource ZeroToVisibilityConverter}}" />
+                        </StackPanel>
+                    </StackPanel>
+                </Grid>
             </ui:Card>
         </Grid>
-        <ui:Card
-            Grid.Column="1"
-            Margin="4,0,-20,12"
-            VerticalAlignment="Stretch">
-            <StackPanel VerticalAlignment="Top">
-                <TextBlock
-                    FontSize="16"
-                    FontWeight="Bold"
-                    Text="{Binding ViewModel.SelectedPack.Manifest.Info.Name, FallbackValue=''}" />
-                <TextBlock Margin="0,8,0,0" Text="{Binding ViewModel.SelectedPack.Manifest.Info.Description}" />
-                <TextBlock Margin="0,8,0,0" Text="{Binding ViewModel.SelectedPack.Manifest.Version}" />
-                <TextBlock Margin="0,8,0,0" Text="{Binding ViewModel.SelectedPack.Variant.Label}" />
-            </StackPanel>
-        </ui:Card>
     </Grid>
 </Page>
