--- a/Lip.GUI.Lite/Views/Pages/SettingsPage.xaml
+++ b/Lip.GUI.Lite/Views/Pages/SettingsPage.xaml
@@ -10,7 +10,6 @@
     Title="SettingsPage"
     d:DataContext="{d:DesignInstance local:SettingsPage,
                                      IsDesignTimeCreatable=False}"
-    d:DesignHeight="450"
     d:DesignWidth="800"
     ui:Design.Background="{DynamicResource ApplicationBackgroundBrush}"
     ui:Design.Foreground="{DynamicResource TextFillColorPrimaryBrush}"
@@ -19,33 +18,165 @@
     <Page.Resources>
         <helpers:EnumToBooleanConverter x:Key="EnumToBooleanConverter" />
     </Page.Resources>
-
     <StackPanel>
         <TextBlock
-            FontSize="20"
-            FontWeight="Medium"
-            Text="Personalization" />
-        <TextBlock Margin="0,12,0,0" Text="Theme" />
-        <RadioButton
-            Margin="0,12,0,0"
-            Command="{Binding ViewModel.ChangeThemeCommand, Mode=OneWay}"
-            CommandParameter="theme_light"
-            Content="Light"
-            GroupName="themeSelect"
-            IsChecked="{Binding ViewModel.CurrentTheme, Converter={StaticResource EnumToBooleanConverter}, ConverterParameter=Light, Mode=OneWay}" />
-        <RadioButton
-            Margin="0,8,0,0"
-            Command="{Binding ViewModel.ChangeThemeCommand, Mode=OneWay}"
-            CommandParameter="theme_dark"
-            Content="Dark"
-            GroupName="themeSelect"
-            IsChecked="{Binding ViewModel.CurrentTheme, Converter={StaticResource EnumToBooleanConverter}, ConverterParameter=Dark, Mode=OneWay}" />
+            Margin="16,16,0,0"
+            HorizontalAlignment="Left"
+            FontSize="32"
+            FontWeight="Bold"
+            Text="Settings" />
 
-        <TextBlock
-            Margin="0,24,0,0"
-            FontSize="20"
-            FontWeight="Medium"
-            Text="About Lip.GUI.Lite" />
-        <TextBlock Margin="0,12,0,0" Text="{Binding ViewModel.AppVersion, Mode=OneWay}" />
+        <StackPanel
+            Width="Auto"
+            MaxWidth="600"
+            Margin="32,24,32,24"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top">
+
+            <!--  Section: Personalization  -->
+            <TextBlock
+                Margin="0,0,0,12"
+                FontSize="24"
+                FontWeight="Bold"
+                Text="Personalization" />
+
+            <TextBlock
+                Margin="0,0,0,4"
+                FontWeight="SemiBold"
+                Text="Theme" />
+            <StackPanel Margin="0,0,0,8" Orientation="Horizontal">
+                <RadioButton
+                    Margin="0,0,16,0"
+                    Command="{Binding ViewModel.ChangeThemeCommand, Mode=OneWay}"
+                    CommandParameter="theme_light"
+                    Content="Light"
+                    GroupName="themeSelect"
+                    IsChecked="{Binding ViewModel.CurrentTheme, Converter={StaticResource EnumToBooleanConverter}, ConverterParameter=Light, Mode=OneWay}" />
+                <RadioButton
+                    Command="{Binding ViewModel.ChangeThemeCommand, Mode=OneWay}"
+                    CommandParameter="theme_dark"
+                    Content="Dark"
+                    GroupName="themeSelect"
+                    IsChecked="{Binding ViewModel.CurrentTheme, Converter={StaticResource EnumToBooleanConverter}, ConverterParameter=Dark, Mode=OneWay}" />
+            </StackPanel>
+
+            <Separator Margin="0,8,0,8" />
+            <TextBlock
+                Margin="0,0,0,12"
+                FontSize="24"
+                FontWeight="Bold"
+                Text="RuntimeConfig" />
+            <!--  Section: Cache Path  -->
+            <TextBlock
+                Margin="0,0,0,4"
+                FontWeight="SemiBold"
+                Text="Cache Path" />
+            <TextBox
+                Width="350"
+                Margin="0,0,0,16"
+                HorizontalAlignment="Left"
+                Text="{Binding ViewModel.CachePath, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                TextAlignment="Left" />
+            <TextBlock
+                Margin="0,0,0,4"
+                FontWeight="SemiBold"
+                Text="Clean Cache" />
+            <Button
+                Margin="0,0,0,4"
+                Command="{Binding ViewModel.CleanCacheCommand}"
+                Content="Clean" />
+
+            <!--  Section: GitHub Proxies  -->
+            <TextBlock
+                Margin="0,0,0,4"
+                FontWeight="SemiBold"
+                Text="GitHub Proxies" />
+            <ItemsControl ItemsSource="{Binding ViewModel.GitHubProxies}">
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel Margin="0,2,0,2" Orientation="Horizontal">
+                            <TextBlock
+                                Width="250"
+                                VerticalAlignment="Center"
+                                Text="{Binding .}" />
+                            <Button
+                                Margin="4,0,0,0"
+                                Command="{Binding DataContext.ViewModel.MoveGitHubProxyUpCommand, RelativeSource={RelativeSource AncestorType=Page}}"
+                                CommandParameter="{Binding .}"
+                                Content="↑" />
+                            <Button
+                                Margin="2,0,0,0"
+                                Command="{Binding DataContext.ViewModel.MoveGitHubProxyDownCommand, RelativeSource={RelativeSource AncestorType=Page}}"
+                                CommandParameter="{Binding .}"
+                                Content="↓" />
+                            <Button
+                                Margin="8,0,0,0"
+                                Command="{Binding DataContext.ViewModel.RemoveGitHubProxyCommand, RelativeSource={RelativeSource AncestorType=Page}}"
+                                CommandParameter="{Binding .}"
+                                Content="Delete" />
+                        </StackPanel>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
+            <StackPanel Margin="0,4,0,0" Orientation="Horizontal">
+                <TextBox x:Name="GitHubProxyInput" Width="250" />
+                <Button
+                    Margin="8,0,0,0"
+                    Command="{Binding ViewModel.AddGitHubProxyCommand}"
+                    CommandParameter="{Binding Text, ElementName=GitHubProxyInput}"
+                    Content="Add" />
+            </StackPanel>
+
+            <!--  Section: Go Module Proxies  -->
+            <TextBlock
+                Margin="0,16,0,4"
+                FontWeight="SemiBold"
+                Text="Go Module Proxies" />
+            <ItemsControl ItemsSource="{Binding ViewModel.GoModuleProxies}">
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel Margin="0,2,0,2" Orientation="Horizontal">
+                            <TextBlock
+                                Width="250"
+                                VerticalAlignment="Center"
+                                Text="{Binding .}" />
+                            <Button
+                                Margin="4,0,0,0"
+                                Command="{Binding DataContext.ViewModel.MoveGoModuleProxyUpCommand, RelativeSource={RelativeSource AncestorType=Page}}"
+                                CommandParameter="{Binding .}"
+                                Content="↑" />
+                            <Button
+                                Margin="2,0,0,0"
+                                Command="{Binding DataContext.ViewModel.MoveGoModuleProxyDownCommand, RelativeSource={RelativeSource AncestorType=Page}}"
+                                CommandParameter="{Binding .}"
+                                Content="↓" />
+                            <Button
+                                Margin="8,0,0,0"
+                                Command="{Binding DataContext.ViewModel.RemoveGoModuleProxyCommand, RelativeSource={RelativeSource AncestorType=Page}}"
+                                CommandParameter="{Binding .}"
+                                Content="Delete" />
+                        </StackPanel>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
+            <StackPanel Margin="0,4,0,0" Orientation="Horizontal">
+                <TextBox x:Name="GoModuleProxyInput" Width="250" />
+                <Button
+                    Margin="8,0,0,0"
+                    Command="{Binding ViewModel.AddGoModuleProxyCommand}"
+                    CommandParameter="{Binding Text, ElementName=GoModuleProxyInput}"
+                    Content="Add" />
+            </StackPanel>
+
+            <Separator Margin="0,24,0,8" />
+
+            <!--  Section: About  -->
+            <TextBlock
+                FontSize="20"
+                FontWeight="Bold"
+                Text="About LipUI" />
+            <TextBlock Margin="0,12,0,0" Text="{Binding ViewModel.AppVersion, Mode=OneWay}" />
+            <TextBlock Margin="0,12,0,24" Text="{Binding ViewModel.LipVersion, Mode=OneWay}" />
+        </StackPanel>
     </StackPanel>
 </Page>
