--- a/Lip.GUI.Lite/Views/Windows/MainWindow.xaml
+++ b/Lip.GUI.Lite/Views/Windows/MainWindow.xaml
@@ -137,7 +137,6 @@
         <ui:NavigationView
             x:Name="RootNavigation"
             Padding="42,24,42,0"
-            BreadcrumbBar="{Binding ElementName=BreadcrumbBar}"
             FooterMenuItemsSource="{Binding ViewModel.FooterMenuItems, Mode=OneWay}"
             FrameMargin="0"
             IsBackButtonVisible="Visible"
@@ -146,9 +145,10 @@
             OpenPaneLength="200"
             PaneDisplayMode="Left"
             TitleBar="{Binding ElementName=TitleBar, Mode=OneWay}">
-            <ui:NavigationView.Header>
+            <!--  BreadcrumbBar="{Binding ElementName=BreadcrumbBar}"  -->
+            <!--<ui:NavigationView.Header>
                 <ui:BreadcrumbBar x:Name="BreadcrumbBar" Margin="42,32,42,20" />
-            </ui:NavigationView.Header>
+            </ui:NavigationView.Header>-->
             <ui:NavigationView.ContentOverlay>
                 <Grid>
                     <ui:SnackbarPresenter x:Name="SnackbarPresenter" />
