--- a/Lip.GUI.Lite/Views/Pages/BedrinthPacksList.xaml
+++ b/Lip.GUI.Lite/Views/Pages/BedrinthPacksList.xaml
@@ -3,11 +3,12 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:helpers="clr-namespace:Lip.GUI.Lite.Helpers"
     xmlns:local="clr-namespace:Lip.GUI.Lite.Views.Pages"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
     Title="BedrinthPacketList"
-    d:DataContext="{d:DesignInstance local:DashboardPage,
+    d:DataContext="{d:DesignInstance local:BedrinthPacksList,
                                      IsDesignTimeCreatable=False}"
     d:DesignHeight="450"
     d:DesignWidth="800"
@@ -15,7 +16,184 @@
     ui:Design.Foreground="{DynamicResource TextFillColorPrimaryBrush}"
     Foreground="{DynamicResource TextFillColorPrimaryBrush}"
     mc:Ignorable="d">
-    <Grid>
-        
+    <Page.Resources>
+        <helpers:StringNotEmptyToVisibilityConverter x:Key="StringNotEmptyToVisibilityConverter" />
+    </Page.Resources>
+    <Grid Margin="0,0,0,0">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+
+        <!--  顶部标题与描述  -->
+        <StackPanel
+            Grid.Row="0"
+            Margin="0,32,0,0"
+            HorizontalAlignment="Center">
+            <TextBlock
+                FontSize="28"
+                FontWeight="Bold"
+                Text="FIND YOUR FAVORITE"
+                TextAlignment="Center" />
+            <TextBlock
+                FontSize="20"
+                FontWeight="Bold"
+                Foreground="#a78bfa"
+                Text="LEVILAMINA MODS"
+                TextAlignment="Center" />
+            <TextBlock
+                Margin="0,8,0,0"
+                FontSize="14"
+                Foreground="{DynamicResource TextFillColorTertiaryBrush}"
+                Text="Bedrinth is our dedicated mod repository! You can explore various mods specifically for LeviLamina!"
+                TextAlignment="Center" />
+        </StackPanel>
+
+        <!--  搜索栏与筛选  -->
+        <StackPanel
+            Grid.Row="1"
+            Margin="0,32,0,0"
+            HorizontalAlignment="Center"
+            Orientation="Horizontal">
+            <TextBlock
+                Margin="0,0,8,0"
+                VerticalAlignment="Center"
+                FontSize="14"
+                Text="Search:" />
+            <TextBox
+                Width="320"
+                Height="32"
+                Margin="0,0,16,0"
+                VerticalAlignment="Center"
+                Text="{Binding ViewModel.SearchText, UpdateSourceTrigger=PropertyChanged}" />
+            <ui:Button
+                Margin="8,0,0,0"
+                Padding="12,6"
+                Command="{Binding ViewModel.RefreshCommand}"
+                Content="Search"
+                Icon="{ui:SymbolIcon Search20}" />
+        </StackPanel>
+
+        <!--  加载指示器  -->
+        <ui:ProgressRing
+            Grid.Row="3"
+            Width="40"
+            Height="40"
+            Margin="0,20,0,0"
+            HorizontalAlignment="Center"
+            IsIndeterminate="True"
+            Visibility="{Binding ViewModel.IsLoading, Converter={StaticResource BooleanToVisibilityConverter}}" />
+        <ItemsControl Grid.Row="2" ItemsSource="{Binding ViewModel.Packages}">
+            <ItemsControl.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <StackPanel Orientation="Vertical" />
+                </ItemsPanelTemplate>
+            </ItemsControl.ItemsPanel>
+            <ItemsControl.ItemTemplate>
+                <DataTemplate>
+                    <ui:Card
+                        Margin="16,8"
+                        Padding="16"
+                        Cursor="Hand">
+                        <ui:Card.InputBindings>
+                            <MouseBinding
+                                Command="{Binding DataContext.ViewModel.NavigateToPackageCommand, RelativeSource={RelativeSource AncestorType=Page}}"
+                                CommandParameter="{Binding}"
+                                MouseAction="LeftClick" />
+                        </ui:Card.InputBindings>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto" />
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="Auto" />
+                            </Grid.ColumnDefinitions>
+
+                            <!--  包图标  -->
+                            <Border
+                                Grid.Column="0"
+                                Width="48"
+                                Height="48"
+                                Margin="0,0,16,0"
+                                Background="{DynamicResource ControlFillColorSecondaryBrush}"
+                                CornerRadius="8">
+                                <Grid>
+                                    <ui:Image
+                                        CornerRadius="4"
+                                        Source="{Binding AvatarUrl}"
+                                        Stretch="UniformToFill"
+                                        Visibility="{Binding AvatarUrl, Converter={StaticResource StringNotEmptyToVisibilityConverter}}" />
+                                    <ui:SymbolIcon
+                                        FontSize="24"
+                                        Symbol="Box24"
+                                        Visibility="{Binding AvatarUrl, Converter={StaticResource StringNotEmptyToVisibilityConverter}, ConverterParameter=Invert}" />
+                                </Grid>
+                            </Border>
+
+                            <!--  包信息  -->
+                            <StackPanel Grid.Column="1" VerticalAlignment="Center">
+                                <StackPanel Orientation="Horizontal">
+                                    <TextBlock
+                                        FontSize="16"
+                                        FontWeight="SemiBold"
+                                        Text="{Binding Name}" />
+                                    <TextBlock
+                                        Margin="4,0,0,0"
+                                        VerticalAlignment="Bottom"
+                                        FontSize="12"
+                                        Foreground="{DynamicResource TextFillColorSecondaryBrush}"
+                                        Text="{Binding Author}" />
+                                </StackPanel>
+                                <TextBlock
+                                    Margin="0,8,0,0"
+                                    FontSize="14"
+                                    Foreground="{DynamicResource TextFillColorPrimaryBrush}"
+                                    Text="{Binding Description}"
+                                    TextWrapping="Wrap" />
+                                <TextBlock
+                                    Margin="0,8,0,0"
+                                    FontSize="12"
+                                    Foreground="{DynamicResource TextFillColorTertiaryBrush}"
+                                    Text="{Binding TagsDisplay}"
+                                    Visibility="{Binding TagsDisplay, Converter={StaticResource StringNotEmptyToVisibilityConverter}}" />
+                            </StackPanel>
+
+                            <!--  包统计信息  -->
+                            <StackPanel
+                                Grid.Column="2"
+                                Margin="16,0,0,0"
+                                VerticalAlignment="Center">
+                                <TextBlock
+                                    FontSize="12"
+                                    Foreground="{DynamicResource TextFillColorSecondaryBrush}"
+                                    Text="Stars" />
+                                <TextBlock
+                                    HorizontalAlignment="Center"
+                                    FontSize="14"
+                                    FontWeight="SemiBold"
+                                    Text="{Binding FormattedHotness}" />
+                                <TextBlock
+                                    Margin="0,8,0,0"
+                                    FontSize="11"
+                                    Foreground="{DynamicResource TextFillColorTertiaryBrush}"
+                                    Text="{Binding FormattedUpdated}" />
+                            </StackPanel>
+                        </Grid>
+                    </ui:Card>
+                </DataTemplate>
+            </ItemsControl.ItemTemplate>
+        </ItemsControl>
+
+        <!--  加载更多按钮  -->
+        <ui:Button
+            Grid.Row="4"
+            Margin="0,16,0,16"
+            HorizontalAlignment="Center"
+            Command="{Binding ViewModel.LoadMoreCommand}"
+            Content="Load More"
+            Icon="{ui:SymbolIcon ChevronDown20}"
+            Visibility="{Binding ViewModel.HasMorePages, Converter={StaticResource BooleanToVisibilityConverter}}" />
     </Grid>
 </Page>
